# kitup

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: check.yml  release.yml
docs/: API.md  RELEASE.md  host-adapter-contract.md  vision.md
examples/: README.md
examples/go/: go.mod  main.go
examples/python/: main.py  pyproject.toml
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
examples/ts/: cli.ts  package.json  pnpm-lock.yaml
go/: go.mod  hosts_gen.go  kitup.go  kitup_test.go
go-cobra/: go.mod  skill.go  skill_test.go
python/: README.md  pyproject.toml
python/src/kitup/: __init__.py  _github.py  _hosts_generated.py  _metadata.py  _paths.py  bundle.py  hosts.py  install.py  types.py  workflow.py
python/tests/: golden_test.py  test_bundle.py  test_hosts.py  test_install.py  test_workflow.py
rust/: Cargo.toml  README.md
rust/src/: hosts_generated.rs  lib.rs
rust/tests/: golden.rs
scripts/: check.mjs  prepare-release.mjs  smoke-release.sh  sync-hosts.mjs
skills/kitup/: SKILL.md
spec/: hosts.json  hosts.schema.json
testdata/: cases.schema.json
testdata/cases/: bundled-skill-install.json
testdata/skills/basic/: SKILL.md
testdata/skills/basic/assets/: template.json
testdata/skills/basic/references/: guide.md
testdata/skills/basic/scripts/: helper.sh
testdata/skills/invalid-frontmatter/: SKILL.md
testdata/skills/missing-skill-md/: README.md
ts/: README.md  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json
ts/src/: hosts.generated.ts  index.ts
ts/test/: golden.test.ts
