[package]
name = "kitup"
version = "0.1.2"
edition = "2021"
description = "Shared installer SDK for bundled Agent Skills."
license = "MIT"
repository = "https://github.com/lathe-cli/kitup"
homepage = "https://github.com/lathe-cli/kitup"
readme = "README.md"
keywords = ["agent", "skills", "installer", "sdk"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ureq = { version = "2", default-features = false, features = ["tls"] }
